// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The replace serializer should provide a helper to return the child of an element only 1`] = `
<View>
  Hello world!
</View>
`;

exports[`The replace serializer should provide a helper to return the children of an element only 1`] = `
Array [
  <Text>
    Hello world1!
  </Text>,
  <Text>
    Hello world2!
  </Text>,
  <Text>
    Hello world3!
  </Text>,
]
`;

exports[`The replace serializer should provide a helper to return the component with props and no children 1`] = `
<View>
  <Text />
</View>
`;

exports[`The replace serializer should replace the expected component 1`] = `
<View>
  <Placeholder>
    <Text>
      Replaced
    </Text>
  </Placeholder>
</View>
`;

exports[`The replace serializer should replace the expected component completely 1`] = `<View />`;
